@@ -1,7 +1,6 @@
 <component name="ProjectDictionaryState">
   <dictionary name="hoyinm14mc">
     <words>
-      <w>iden</w>
       <w>multitype</w>
       <w>unjailed</w>
     </words>
